2008-05-14  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.

        Qt build fix. Add JavaScriptCallFrame.{idl,cpp} to the build.

        * WebCore.pro:

2008-05-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.

        - Windows part of <rdar://problem/5725912> improve render quality of transformed text

        * platform/graphics/win/FontCGWin.cpp:
        (WebCore::Font::drawGlyphs): Added call to
        wkSetCGContextFontRenderingStyle().

2008-05-13  Alp Toker  <alp@nuanti.com>

        GTK+ build fix. Implement EventLoopGtk.cpp.

        * GNUmakefile.am:
        * platform/gtk/EventLoopGtk.cpp: Added.
        (WebCore::EventLoop::cycle):

2008-05-13  Alp Toker  <alp@nuanti.com>

        GTK+ build fix. Fix IDL filename typo and add JavaScriptCallFrame.cpp
        to the build.

        * GNUmakefile.am:

2008-05-13  Matt Lilek  <webkit@mattlilek.com>

        Not reviewed, partial Gtk build fix.

        * GNUmakefile.am:

2008-05-13  Timothy Hatcher  <timothy@apple.com>

        Fixes a crash when stepping out in the Inspector's debugger.

        http://bugs.webkit.org/show_bug.cgi?id=19037

        Reviewed by Dan Bernstein.

        * page/InspectorController.cpp:
        (WebCore::currentCallFrame): Adds a null check of currentCallFrame,
        since it can be null. Also returns JSNull to better signify this.
        * page/inspector/ScriptsPanel.js: Updates the debugger interface
        when stepping so the currentCallFrame isn't accessed when not paused.
        Adds a _clearInterface function to remove duplicate code.

2008-05-13  chris fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin

        <rdar://problem/5932677> AX: Submit buttons aren't returning AXTitle

        * page/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::title):

2008-05-13  Timothy Hatcher  <timothy@apple.com>

        Adds an overlay window that covers the scripts panel and